# kyoupro

./: .editorconfig  .gitignore
c/: CMakeLists.txt  docker-compose.yml  start-dev.sh
c++/: CMakeLists.txt  build.sh  docker-compose.yml  start-dev.sh  test.sh
c++/docker/: Dockerfile  image-build.sh
c++/scripts/: build.sh
c++/src/: CMakeLists.txt
c++/src/atcoder/abc111/: CMakeLists.txt  a.cpp  a.h  a_test.cpp  b.cpp  b.h  b_test.cpp  c.cpp  c.h  c_test.cpp  d.cpp  d.h
c++/src/atcoder/abc112/: CMakeLists.txt  a.cpp  a.h
c/atcoder/beginner/q111/: a.c  b.c  c.c  c_sample.c
c/docker/: image-build.sh
c/src/: CMakeLists.txt
c/src/atcoder/abc111/: CMakeLists.txt  a.c  b.c  c.c
c/src/atcoder/beginner/q111/: a.c  b.c  c.c  c_sample.c
c/topcoder/crazybot/: crazy  crazy.c
go/src/topcoder/crazybot/: main.go
haskell/: README.md  StudyHaskell.cabal  haskell.cabal.back  memo.md  stack.yaml
haskell/app/: Main.hs
haskell/atcoder/beginner/q085/: a-spec.hs  a.hs  beginner-q085.cabal
haskell/atcoder/beginner/q086/: a.hs  beginner-q086.cabal
haskell/atcoder/beginner/q110/: a.hs  b.hs  beginner-q110.cabal  c.hs  d.hs
haskell/atcoder/beginner/q111/: a.hs  b.hs  beginner-q111.cabal  c.hs  d.hs
haskell/atcoder/beginner/q165/: a.hs  b.hs  beginner-q165.cabal  c.hs  d.hs
haskell/atcoder/dp/: a.hs  b.hs  c.hs  d.hs  dp.cabal  e.hs  f.hs
haskell/atcoder/dp/dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
haskell/src/AtCoder/Beginner/: Welcome.hs
haskell/src/AtCoder/Beginner/Q085/: A.hs
haskell/src/AtCoder/Beginner/Q086/: Q086.hs
haskell/src/AtCoder/Beginner/Q110/: A.hs  B.hs  C.hs  D.hs
haskell/src/AtCoder/Beginner/Q111/: A.hs  B.hs  C.hs  D.hs
haskell/src/AtCoder/Beginner/Q165/: A.hs
haskell/src/TopCoder/BatchSystem/: BatchSystem.hs
haskell/src/TopCoder/CrazyBot/: CrazyBot.hs
haskell/test/: Spec.hs
haskell/test/AtCoder/Beginner/Q111/: DSpec.hs
haskell/topcoder/: batch_system.hs  crazy_bot.hs  topcoder.cabal
haskell_docker/: docker-compose.yml  memo.md  package.yaml  stack.yaml  start-dev.sh
haskell_docker/src/atcoder/beginner111/: A.hs  B.hs  C.hs  D.hs  SpecA.hs  SpecB.hs  beginner111.cabal
haskell_docker/src/atcoder/beginner422/: A.hs  B.hs  beginner422.cabal
haskell_docker/src/atcoder/dp/: A_1.hs  A_2.hs  A_3.hs  A_4.hs  B_1.hs  B_2.hs  C_1.hs  D_1.hs  E_1.hs  E_2.hs  E_3.hs  Util.hs  dp.cabal
haskell_docker/src/topcoder/: batchsystem.hs  crazy_bot.hs  topcoder.cabal
haskell_docker/src/util/: Util.hs
java/: .gitignore  build.gradle  settings.gradle
java/gradle/wrapper/: gradle-wrapper.properties
java/src/main/java/topcoder/: GraphAlgorithm.java  TopCoder.java
java/src/main/java/topcoder/autoloan/: AutoLoan.java
java/src/main/java/topcoder/badneighbors/: BadNeighbors.java
java/src/main/java/topcoder/batchsystem/: BatchSystem.java
java/src/main/java/topcoder/binaryflips/: BinaryFlips.java
java/src/main/java/topcoder/chessmetric/: ChessMetric.java
java/src/main/java/topcoder/circlescountry/: CirclesCountry.java
java/src/main/java/topcoder/colorfulboxesandballs/: ColorfulBoxesAndBalls.java
java/src/main/java/topcoder/corporationsalary/: CorporationSalary.java
java/src/main/java/topcoder/crazybot/: CrazyBot.java
java/src/main/java/topcoder/floorboards/: FloorBoards.java
java/src/main/java/topcoder/friendscore/: FriendScore.java
java/src/main/java/topcoder/handsshaking/: HandsShaking.java
java/src/main/java/topcoder/interestingdijits/: InterestingDijits.java
java/src/main/java/topcoder/mazemaker/: MazeMaker.java
java/src/main/java/topcoder/numbermagiceasy/: NumberMagicEasy.java
java/src/main/java/topcoder/stockhistory/: StockHistory.java
java/src/main/java/topcoder/thepalindrome/: ThePalindrome.java
java/src/test/java/topcoder/autoloan/: AutoLoanSpec.java
java/src/test/java/topcoder/badneighbors/: BadNeighborsSpec.java
java/src/test/java/topcoder/batchsystem/: BatchSystemSpec.java
java/src/test/java/topcoder/chessmetric/: ChessMetricSpec.java
java/src/test/java/topcoder/circlescountry/: CirclesCountrySpec.java
java/src/test/java/topcoder/corporationsalary/: CorporationSalarySpec.java
java/src/test/java/topcoder/stockhistory/: StockHistorySpec.java
rust/: Cargo.toml  memo.md
rust/src/: lib.rs  main.rs
rust/src/atcoder/: mod.rs
rust/src/atcoder/beginner/: mod.rs
rust/src/atcoder/beginner/q110/: a.rs  b.rs  c.rs  d.rs  mod.rs
rust/src/atcoder/beginner/q116/: a.rs  b.rs  c.rs  d.rs
rust/src/atcoder/beginner/q121/: a.rs  b.rs  c.rs  d.rs  mod.rs
rust/src/atcoder/beginner/q165/: a.rs  b.rs  c.rs  d.rs
rust/src/atcoder/beginner/q166/: a.rs  b.rs
rust/src/atcoder/beginner/q176/: a.rs  b.rs  c.rs  d.rs  e.rs  f.rs
rust/src/atcoder/dp/: a.rs  b.rs  c.rs  d.rs  e.rs  mod.rs
rust/src/atcoder/past/: mod.rs
rust/src/atcoder/past/q201912/: a.rs  b.rs  c.rs  d.rs  e.rs  f.rs  g.rs  h.rs  mod.rs
rust/src/topcoder/: mod.rs
rust/src/topcoder/crazybot/: crazybot.rs
rust/src/util/: io.rs
rust_docker/: .gitignore  Cargo.toml  docker-compose.yml
rust_docker/src/: lib.rs
rust_docker/src/atcoder/: mod.rs
rust_docker/src/atcoder/q111/: a.rs  b.rs  c.rs  d.rs
scala/: build.sbt
scala/src/main/scala/atcoder/dp/: A.scala  B.scala  C.scala
scala/src/main/scala/study/s99/: P01.scala  P02.scala  P03.scala  P04.scala  P05.scala  P06.scala  P07.scala  P08.scala  P09.scala  P10.scala  P11.scala  P12.scala  P13.scala  P14.scala  P15.scala  P16.scala  P17.scala  P18.scala  P19.scala  P20.scala  Util.scala  memo.md
scala/src/main/scala/topcoder/batchsystem/: BatchSystem.scala
scala/src/main/scala/topcoder/crazybot/: CrazyBot.scala
scala/src/main/scala/topcoder/stockhistory/: StockHistory.scala
scala/src/test/scala/example/: HelloSpec.scala
scala/src/test/scala/study/s99/: P01Spec.scala  P02Spec.scala  P03Spec.scala  P04Spec.scala  (+16 more)
typescript/: README.md  package-lock.json  package.json  test.txt  webpack.config.js
typescript/atcoder/dp/: a.ts  b.ts
typescript/atcoder/practice/: a.ts
(+67 files in other folders)
