name:                StudyHaskell
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/StudyHaskell#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     AtCoder.Beginner.Welcome
                       , AtCoder.Beginner.Q085.A
                       , AtCoder.Beginner.Q110.A
                       , AtCoder.Beginner.Q110.B
                       , AtCoder.Beginner.Q110.C
                       , AtCoder.Beginner.Q110.D
                       , AtCoder.Beginner.Q111.A
                       , AtCoder.Beginner.Q111.B
                       , AtCoder.Beginner.Q111.C
                       , AtCoder.Beginner.Q111.D
                       , TopCoder.CrazyBot.CrazyBot
                       , TopCoder.BatchSystem.BatchSystem
  build-depends:       base >= 4.7 && < 5
                       , aeson
                       , aeson-pretty
                       , attoparsec
                       , bytestring
                       , containers
                       , errors
                       , lens
                       , lens-aeson
                       , random-shuffle
                       , strict
                       , split
                       , text
                       , transformers
                       , unordered-containers
                       , vector
  default-language:    Haskell2010

executable StudyHaskell-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , StudyHaskell
  default-language:    Haskell2010

test-suite StudyHaskell-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  other-modules:       AtCoder.Beginner.Q111.DSpec
  build-depends:       base
                     , aeson
                     , vector
                     , StudyHaskell
                     , text
                     , unordered-containers
                     , HUnit
                     , lens-aeson
                     , lens



  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/StudyHaskell
