name:                dp
version:             0.1.0.0
build-type:          Simple
cabal-version:       >=1.10

executable dp-a
  hs-source-dirs:      .
  main-is:             a.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                    , containers
  default-language:    Haskell2010



