name:                dp
version:             0.1.0.0
build-type:          Simple
cabal-version:       >=1.10

executable dp-a
  hs-source-dirs:      .
  main-is:             a.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                    , bytestring
                    , containers
                    , vector
  default-language:    Haskell2010

executable dp-b
  hs-source-dirs:      .
  main-is:             b.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                    , bytestring
                    , containers
                    , vector
  default-language:    Haskell2010

executable dp-c
  hs-source-dirs:      .
  main-is:             c.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                    , bytestring
                    , containers
                    , vector
  default-language:    Haskell2010
