name:                beginner-q085
version:             0.1.0.0
build-type:          Simple
cabal-version:       >=1.10

executable beginner-q085-a
  hs-source-dirs:      .
  main-is:             a.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
  default-language:    Haskell2010

test-suite beginner-q085-a-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      .
  main-is:             a-spec.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , HUnit
  default-language:    Haskell2010


