name:                beginner-q165
version:             0.1.0.0
build-type:          Simple
cabal-version:       >=1.10

executable beginner-q165-a
  hs-source-dirs:      .
  main-is:             a.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
  default-language:    Haskell2010

executable beginner-q165-b
  hs-source-dirs:      .
  main-is:             b.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
  default-language:    Haskell2010

executable beginner-q165-c
  hs-source-dirs:      .
  main-is:             c.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , containers
  default-language:    Haskell2010

executable beginner-q165-d
  hs-source-dirs:      .
  main-is:             d.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
  default-language:    Haskell2010


