-- filepath: /root/src/atcoder/beginner111/beginner111.cabal
cabal-version: >=1.10
name:                beginner422
version:             0.1.0.0
synopsis:            A simple Haskell project
description:         This is a simple Haskell project.
category:            Development
license:             BSD3

-- library
--   exposed-modules:    A
--   hs-source-dirs:     .
--   build-depends:      base >= 4.7 && < 5
--   default-language:   Haskell2010

-- stack exec beginner422-a
executable beginner422-a
  hs-source-dirs:      .
  main-is:             A.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

executable beginner422-b
  hs-source-dirs:      .
  main-is:             B.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base >= 4.7 && < 5
                       , bytestring
                       , vector
  default-language:    Haskell2010
  


custom-setup
  setup-depends:       base >= 4.7 && < 5
                       , Cabal >= 1.10